--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </p>
             </header>
             
-            <form id="logo-form" action="https://formsubmit.co/17bc2309bd2b824b2be4535ff43806d8" method="POST">
+            <form id="logo-form" action="https://formsubmit.co/srgmedia.agency@gmail.com" method="POST">
                 <!--------------- LOGO FORM --------------->
                 <div class="singleQuestion">
                     <div class="form-group logo-group">
