--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
             </p>
             </header>
             
-            <form id="logo-form" action="https://formsubmit.co/srgmedia.agency@gmail.com" method="POST">
+            <form id="logo-form" action="https://api.web3forms.com/submit" method="POST">
                 <!--------------- LOGO FORM --------------->
+                <input type="hidden" name="access_key" value="2529292a-9240-45fa-99a3-ad34bca3a1c8">
                 <div class="singleQuestion">
                     <div class="form-group logo-group">
                         <label id="logo-label" for="email">Logo</label>
